Fix alignment again after talking to ux

--- a/frontend/src/app/action-plan/action-plan.component.scss
+++ b/frontend/src/app/action-plan/action-plan.component.scss
@@ -60,3 +60,6 @@
   margin-left: -0.8rem;
 }
 
+.add-action-text {
+  margin-bottom: 1px;
+}
