--- a/frontend/src/style/styles.scss
+++ b/frontend/src/style/styles.scss
@@ -268,3 +268,7 @@ mat-form-field.quarter-filter .mat-mdc-text-field-wrapper {
 * {
   line-height: 115% !important;
 }
+
+.add-cross-button {
+  margin-bottom: 1px;
+}
